--- a/Projeto/estilo.css
+++ b/Projeto/estilo.css
@@ -1,4 +1,20 @@
 @charset "UTF-8";
+
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
-    background-color: rgb(56, 247, 22);
+    background-color: white;
+}
+
+main {
+    background-image: linear-gradient(to right, #2FE01B, #24AD15);
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px #0d4d02b5;
+    width: 90%;
+    padding: 10px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
